--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Rety minisite</title>
+  <title>Vhetty minisite</title>
   <!-- Include Google Fonts for modern thin font -->
   <link rel="stylesheet" href="fonts/icomoon/style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -26,7 +26,7 @@
     </div>
     <div class="navbar-container"> <!-- Container for navbar -->
       <div class="navbar">
-       <div  class="brand-name">Brandname</div> 
+       <div  class="brand-name">Vhetty</div> 
 
        
        
@@ -81,7 +81,7 @@
       <!-- About Business Container -->
   <div class="container">
     <i style="color: rgb(31, 30, 30);" class="fas fa-info-circle icon"></i>
-    <div class="about-text">About Business</div>
+    <div class="about-text">About Business </div> <img style=" margin-bottom: 10px; margin-top: 5px; height: 100px; width: 100px; right: 30px; border-radius: 10px;" src="images/profile.jpg" alt="">
     <div class="small-text">
       This is a business dedicated to providing top-notch services in the industry.
       This is a business dedicated to providing top-notch services in the industry.
@@ -136,11 +136,14 @@
 <footer class="footer">
   
   <div class="copyright">
-      &copy; 2024 Vety. All rights reserved.
+      &copy; 2024 Vhetty. All rights reserved.
   </div>
 </footer>
 
-
+  <!-- Preloader -->
+  <div id="preloader">
+    <div class="typing-text"> Vhetty</div>
+  </div>
 
   <script>
     // JavaScript for slider functionality
@@ -198,6 +201,17 @@
     });
   </script>
 
-
+<script>
+  // Simulate a 5-second loading time for the preloader
+  window.onload = function() {
+    setTimeout(function() {
+      document.getElementById("preloader").style.display = "none";
+      document.querySelector(".content").style.display = "block";
+    }, 10000); // 10 seconds delay
+  };
+</script>
 </body>
 </html>
+
+
+
